    - validation checking functions have been renamed to distinguish warnings, errors that should short circuit the
      validation logic and error that should be reported while letting the validation process continue
- introduce the notion of region to DbBeanLanguage for finer localisation (ex. en-US vs en)
- add support for a hierarchy of languages in multilingual projects, where label value for a language+region,
  if they are not directly available, can be retrieved from the raw language labels and then, if still unavailable,
  from the default language
- add support to use id_label, id_name_label, id_description_label fields, if present, to determine the 'name'
  (its representation in tiles and lists)

All generated code from version 2.2 must be regenerated. In editable files, overloaded functions related to file
handling, data validation and naming and ordering beans should be checked.

NEW FEATURES:
- add two separate annotations to distinguish generated files that can be edited from those that should not be (replace
  use of javax.annotation.processing.Generated)
- add support for ApplicationParameters singleton, to centralize application parameters and allow data libraries
  built with Beanmaker to be used in more than one project/deliverable.
- add support for subcontainers in forms, so the the form's fields can be placed in a subcontainer and the form's
  buttons in another (this to help take advantage of CSS frameworks that offer facilites to separate body and
  footer in modales)
- introduce Bootstrap 5 HtmlFormHelper

BUG FIXES:
- bug fix for: drag and drop doesn't work for tables with an item_order linked to an other field
- bug fix for: cannot create more than one instance of Beanmaker2 javascript object on the same page
- bug fix for: null String saved as empty text instead of a SQL NULL value

MINOR CHANGES:
- code cleanup in master tables
- improve some exception messages
- various small improvements and fixes